--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_auth: ^4.4.2
   cloud_firestore: ^4.5.2
   firebase_core: ^2.10.0
+  contacts_service: ^0.6.3
+  # agora_rtc_engine: ^4.0.9
 
 dev_dependencies:
   flutter_test:
