--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cloud_firestore: ^4.5.2
   firebase_core: ^2.10.0
   contacts_service: ^0.6.3
+  material_design_icons_flutter: ^6.0.7096
+  cached_network_image: ^3.2.3
   # agora_rtc_engine: ^4.0.9
 
 dev_dependencies:
@@ -64,7 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+   - assets/icons/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
